test/sema/s04/fail_funcself.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s04/fail_funcself.nsl — S4 (lang.ebnf:838) fail variant.
// `func_self` dummy args must be `wire`; an `input` (or other
// non-wire) here violates S4.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`:
//   dummy argument of 'func_self' must be declared 'wire' (S4)
//
// **Phase 4a TDD red state**: no S4 checker exists; FAILS until
// Phase 4b T045.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

declare d {
  input a;
  func_self ready(a);
}

// CHECK: error: dummy argument of 'func_self' must be declared 'wire' (S4)
